<resources>
    <string name="app_name">pic</string>
    
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    
    <string name="nav_launcher_splash">Splash</string>
    <string name="nav_launcher_browsing">Browsing</string>
    <string name="nav_launcher_signing">Signing</string>
    <string name="nav_launcher_sign_in">Sign In</string>
    
    <string name="nav_home_index">Index</string>
    <string name="nav_home_search">Search</string>
    <string name="nav_home_account">Account</string>
    <string name="nav_home_stars">Stars</string>
    <string name="nav_home_categories">Categories</string>
    
    <string name="nav_comic_metadata">Comic</string>
    
    <string name="splash_greeting_a">You seem discovered</string>
    <string name="splash_greeting_b">an interesting entry</string>
    <string name="splash_go_forward">GO FORWARD</string>
    <string name="splash_license_greeting">This Project is distributed under</string>
    <string name="splash_license">GNU Affero General Public License v3.0</string>
    
    <string name="browsing_diversion_enable">Apply Diversion Server</string>
    <string name="browsing_proxy_enable">Apply proxy server</string>
    <string name="browsing_proxy_type">Type</string>
    <string-array name="browsing_proxy_types">
        <item>Http</item>
        <item>Sock5</item>
    </string-array>
    <string name="browsing_proxy_address">Address</string>
    <string name="browsing_proxy_port">Port</string>
    <string name="browsing_proxy_port_help_text">Leave empty will be set to 8080</string>
    <string name="browsing_greeting">All configure complete?</string>
    <string name="browsing_go">GO</string>
    
    <string name="signing_greeting_a">Oh, it\'s already here…</string>
    <string name="signing_greeting_b">Are you ready —</string>
    <string name="signing_greeting_c">to go forward?</string>
    <string name="signing_greeting_sign_in">Already have an account?</string>
    <string name="signing_sign_in">Sign in</string>
    <string name="signing_sign_up">SIGN UP</string>
    
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_forgot">Forgot Password?</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="sign_in_button_signing_in">SIGNING IN…</string>
    <string name="sign_in_greeting_sign_up">Don\'t have an account?</string>
    <string name="sign_in_to_sign_up">Sign Up</string>
    <string name="sign_in_invalid_field">Invalid Username / Password</string>
    
    <string name="index_random">Random</string>
    
    <string name="search_result_count">Total %s results found.</string>
    <string name="search_menu_sort">Sorting</string>
    <string name="search_menu_sort_new">New to Old</string>
    <string name="search_menu_sort_old">Old to New</string>
    <string name="search_menu_sort_likes">Likes</string>
    <string name="search_menu_sort_views">Views</string>
    
    <string name="comic_likes">Likes</string>
    
    <string name="metadata_chapter_title">Chapter</string>
    <string name="metadata_chapter_asc">ASC</string>
    <string name="metadata_chapter_dsc">DSC</string>
    <string name="metadata_category_title">Category</string>
    <string name="metadata_tag_title">Tag</string>
    <string name="metadata_read">Read</string>
    
    <string name="viewer_image_load_error">Image Load Error.\nClick to retry</string>
    <string name="viewer_fab_next">Next</string>
    <string name="viewer_fab_back">Back</string>
    
    <string name="request_io_exception">Connection Exception: %s</string>
    <string name="request_unknown_exception">Unknown Exception: %s</string>
    <string name="request_unexpected_state">Unexpected State: %s</string>
    <string name="response_error">Response Code [%d] with Error [%d]: %s - %s</string>
    <string name="response_rejected">Request Rejected by Server</string>
    <string name="response_empty">Response Content Null</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
        
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
        
        "Bold, graphic, intentional.\n\n"
        
        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"
        
        "Motion provides meaning.\n\n"
        
        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
        
        "3D world.\n\n"
        
        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"
        
        "Light and shadow.\n\n"
        
        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
        
        "Resting elevation.\n\n"
        
        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"
        
        "Component elevations.\n\n"
        
        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
        
        "Responsive elevation and dynamic elevation offsets.\n\n"
        
        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"
        
        "Avoiding elevation interference.\n\n"
        
        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>