<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph_launcher"
    app:startDestination="@id/splash">
    
    <fragment
        android:id="@+id/splash"
        android:name="projekt.cloud.piece.pic.ui.splash.Splash"
        android:label="@string/nav_launcher_splash">
        <action
            android:id="@+id/to_browsing"
            app:destination="@id/browsing" />
    </fragment>

    <fragment
        android:id="@+id/browsing"
        android:name="projekt.cloud.piece.pic.ui.browsing.Browsing"
        android:label="@string/nav_launcher_browsing">
        <action
            android:id="@+id/to_signing"
            app:destination="@id/signing" />
    </fragment>
    
    <fragment
        android:id="@+id/signing"
        android:name="projekt.cloud.piece.pic.ui.signing.Signing"
        android:label="@string/nav_launcher_signing" >
        <action
            android:id="@+id/to_sign_in"
            app:destination="@id/sign_in" />
    </fragment>

    <fragment
        android:id="@+id/sign_in"
        android:name="projekt.cloud.piece.pic.ui.signIn.SignIn"
        android:label="@string/nav_launcher_sign_in" />

</navigation>