<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed">
        
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_view_greeting_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signing_greeting_a"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_view_greeting_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signing_greeting_b"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintTop_toBottomOf="@id/material_text_view_greeting_a"
            app:layout_constraintStart_toStartOf="parent" />
    
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_view_greeting_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signing_greeting_c"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintTop_toBottomOf="@id/material_text_view_greeting_b"
            app:layout_constraintEnd_toEndOf="parent" />
    
        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/constraint_fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signing_sign_up"
            app:layout_constraintTop_toBottomOf="@id/material_text_view_greeting_c"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/md_spec_spacing_ver_16" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/md_spec_spacing_hor_16"
        android:layout_marginVertical="@dimen/md_spec_spacing_ver_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_view_greeting_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signing_greeting_sign_in"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_view_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signing_sign_in"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginStart="@dimen/md_spec_spacing_hor_8"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/material_text_view_greeting_sign_in" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>