<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/material_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_view_greeting_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_greeting_a"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_view_greeting_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_greeting_b"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintTop_toBottomOf="@id/material_text_view_greeting_a"
            app:layout_constraintEnd_toEndOf="parent" />
        
        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/constraint_fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_spec_spacing_ver_16"
            android:text="@string/splash_go_forward"
            app:layout_constraintTop_toBottomOf="@id/material_text_view_greeting_b"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>