<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="projekt.cloud.piece.pic.ui.signIn.SignInLayoutCompat" />
        <variable
            name="layoutCompat"
            type="SignInLayoutCompat" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="?attr/colorSurface">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/material_toolbar"
                android:layout_width="@dimen/constraint_fill_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_round_arrow_back_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/constraint_fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/md_spec_spacing_hor_16"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="@dimen/md_spec_spacing_hor_16"
                    android:paddingVertical="@dimen/md_spec_spacing_ver_16">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/material_text_view_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_title"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        style="@style/TextAppearance.MaterialComponents.Headline5" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_in_username"
                        android:layout_marginTop="@dimen/md_spec_spacing_ver_16"
                        app:boxStrokeErrorColor="?attr/colorOnSurfaceVariant"
                        app:endIconMode="clear_text"
                        app:hintTextColor="?attr/colorOnSurfaceVariant"
                        app:layout_constraintTop_toBottomOf="@id/material_text_view_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:startIconDrawable="@drawable/ic_round_person_24"
                        app:startIconTint="?attr/colorOnSurfaceVariant"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_in_password"
                        android:layout_marginTop="@dimen/md_spec_spacing_ver_16"
                        app:boxStrokeErrorColor="?attr/colorOnSurfaceVariant"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="?attr/colorOnSurfaceVariant"
                        app:layout_constraintTop_toBottomOf="@id/text_input_layout_username"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:startIconDrawable="@drawable/ic_round_lock_24"
                        app:startIconTint="?attr/colorOnSurfaceVariant"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/material_text_view_forgot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_spec_spacing_ver_8"
                        android:text="@string/sign_in_forgot"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:textColor="?attr/colorPrimary"
                        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/material_button_sign_in"
                        android:layout_width="@dimen/constraint_fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_spec_spacing_ver_8"
                        android:text="@string/sign_in_button"
                        android:onClick="@{(view) -> layoutCompat.onSignInButtonClick(view.context)}"
                        app:layout_constraintTop_toBottomOf="@id/material_text_view_forgot"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_spec_spacing_ver_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/material_text_view_greeting_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_greeting_sign_up"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/md_spec_spacing_hor_8"
                    android:text="@string/sign_in_to_sign_up"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/material_text_view_greeting_sign_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>